// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sparkline chart rendering Should re-render the Sparkline chart with data 1`] = `
<div>
  <div
    aria-label="Graph has no data to display"
    id="_SparklineChart_empty"
    role="alert"
    style="opacity: 0;"
  />
</div>
`;

exports[`Sparkline chart rendering Should re-render the Sparkline chart with data 2`] = `
<div>
  <div
    class="fui-sprk__inlineBlock"
    data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
    style=""
  >
    <svg
      aria-label="Sparkline with label 19.64"
      height="20"
      tabindex="0"
      width="80"
    >
      <path
        class="line"
        fill="transparent"
        opacity="1"
        stroke="#00AA00"
        stroke-width="2"
      />
      <path
        aria-hidden="true"
        class="area"
        fill="#00AA00"
        fill-opacity="0.2"
        opacity="1"
        role="img"
      />
    </svg>
  </div>
</div>
`;

exports[`Sparkline snapShot testing renders Sparkline correctly 1`] = `
<div
  className="fui-sprk__inlineBlock"
  data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
>
  <svg
    aria-label="Sparkline with label 19.64"
    height={20}
    tabIndex={0}
    width={80}
  >
    <path
      className="line"
      d={null}
      fill="transparent"
      opacity={1}
      stroke="#00AA00"
      strokeWidth={2}
    />
    <path
      aria-hidden={true}
      className="area"
      d={null}
      fill="#00AA00"
      fillOpacity={0.2}
      opacity={1}
      role="img"
    />
  </svg>
  <svg
    height={20}
    width={80}
  >
    <text
      className="fui-sprk__valueText"
      dx={8}
      dy={-5}
      textAnchor="start"
      x="0%"
      y="100%"
    >
      19.64
    </text>
  </svg>
</div>
`;

exports[`Sparkline snapShot testing renders Sparkline correctly with no legend 1`] = `
<div
  className="fui-sprk__inlineBlock"
  data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
>
  <svg
    aria-label="Sparkline with label 131.33"
    height={20}
    tabIndex={0}
    width={80}
  >
    <path
      className="line"
      d="M0,14.155L16,5.757L32,7.96L48,2L64,16.187L80,10.079"
      fill="transparent"
      opacity={1}
      stroke="#E60000"
      strokeWidth={2}
    />
    <path
      aria-hidden={true}
      className="area"
      d="M0,14.155L16,5.757L32,7.96L48,2L64,16.187L80,10.079L80,20L64,20L48,20L32,20L16,20L0,20Z"
      fill="#E60000"
      fillOpacity={0.2}
      opacity={1}
      role="img"
    />
  </svg>
</div>
`;
